# httpserv

./: CMakeLists.txt  README.MD
cert/: README.MD  cert.pem  key.pem
example/src/: example.cpp
include/logger/: logger.h
include/router/: router.h
include/server/: connection.h  error.h  http.h  request.h  response.h  server.h  socket.h  stream.h  tls.h
src/logger/: logger.cpp
src/router/: router.cpp
src/server/: connection.cpp  http.cpp  server.cpp
src/server/http/: http_stream.cpp  http_stream.h  request.cpp  response.cpp  version.cpp  version.h
src/server/http/v1/: httpv_1.cpp  httpv_1.h
src/server/http/v2/: httpv_2.cpp  httpv_2.h  stream_manager.cpp  stream_manager.h  v_2_stream.cpp  v_2_stream.h
src/server/socket/: socket.cpp  stream.cpp
